cmake_minimum_required(VERSION 2.8)
project( tracker )
SET (CMAKE_CXX_COMPILER             "/usr/bin/g++")
SET (CMAKE_CXX_FLAGS                "-Wall -g -O3 -std=c++11 -fopenmp")
SET (CMAKE_CXX_FLAGS_DEBUG          "-g")
SET (CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
SET (CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g")
find_package( OpenCV REQUIRED)
find_path(FFTW_INCLUDE_DIR fftw3.h  ${FFTW_INCLUDE_DIRS})
find_library(FFTW_LIBRARY fftw3 ${FFTW_LIBRARY_DIRS})

include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( "src/likelihood/" )
include_directories( "src/models/" )
include_directories( "src/features/" )
include_directories( "src/utils/" )
include_directories( "src/DPP/" )
include_directories( "libs/LBP/" )
include_directories( "/usr/include/eigen3/" )
#include_directories( "/usr/local/include/eigen3/" )

#add_executable( tracker src/test_particle_filter.cpp src/models/particle_filter.cpp  src/utils/utils.cpp src/likelihood/gaussian.cpp src/utils/image_generator.cpp src/features/haar.cpp src/likelihood/logistic_regression.cpp src/likelihood/hamiltonian_monte_carlo.cpp src/likelihood/incremental_gaussiannaivebayes.cpp src/likelihood/multivariate_gaussian.cpp src/features/local_binary_pattern.cpp src/likelihood/multinomial.cpp src/likelihood/multinomialnaivebayes.cpp src/features/hog.cpp src/features/mb_lbp.cpp  src/libs/LBP/LBP.cpp) 
#target_link_libraries( tracker ${OpenCV_LIBS} ${FFTW_LIBRARY})

#add_executable( smc_squared src/test_smcsquared.cpp  src/models/smc_squared.cpp src/models/pmmh.cpp src/models/particle_filter.cpp  src/utils/utils.cpp src/likelihood/gaussian.cpp src/utils/image_generator.cpp src/features/haar.cpp src/likelihood/logistic_regression.cpp src/likelihood/hamiltonian_monte_carlo.cpp src/likelihood/incremental_gaussiannaivebayes.cpp src/likelihood/multivariate_gaussian.cpp src/features/local_binary_pattern.cpp src/likelihood/multinomial.cpp src/likelihood/multinomialnaivebayes.cpp  src/features/hog.cpp src/features/mb_lbp.cpp src/libs/LBP/LBP.cpp) 
#target_link_libraries( smc_squared ${OpenCV_LIBS}  ${FFTW_LIBRARY} )

add_executable( dpp src/test_dpp.cpp  src/DPP/dpp_tracker.cpp src/utils/utils.cpp src/utils/c_utils.cpp src/likelihood/gaussian.cpp src/utils/image_generator.cpp src/features/haar.cpp src/likelihood/logistic_regression.cpp src/likelihood/hamiltonian_monte_carlo.cpp src/likelihood/incremental_gaussiannaivebayes.cpp src/likelihood/multivariate_gaussian.cpp src/features/local_binary_pattern.cpp src/likelihood/multinomial.cpp src/likelihood/multinomialnaivebayes.cpp  src/features/hog.cpp src/features/mb_lbp.cpp src/libs/LBP/LBP.cpp) 
target_link_libraries( dpp ${OpenCV_LIBS}  ${FFTW_LIBRARY} )
